# Fractal

./: CMakeLists.txt  Fragment.glsl  GLobject.cpp  GLobject.h  README.md  Settings.h  Shader.cpp  Shader.h  Utils.h  Vertex.glsl  Window.cpp  Window.h  main.cpp
